@@ -1,3 +1,8 @@
+2004-09-08 Alain Magloire
+
+	Fix for PR 73454.
+	* src/org/eclipse/cdt/internal/ui/text/folding/DefaultCFoldingStructureProvider.java
+
 2004-09-07 Alain Magloire
 	Wrong icons
 	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java
